// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TUI inline tool wrapping snapshots consecutive grep, glob, and read rows at a narrow width 1`] = `
"   ✱ Grep "MIAOPAN_CODE.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/miaopan-code/src (151 matches)

   ✱ Glob "**/*db*" in packages/miaopan-code (6 matches)
   → Read packages/miaopan-code/src/storage/db.ts [offset=1, limit=130]
   → Read packages/miaopan-code/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const
     MIAOPAN_CODE_DB|MIAOPAN_CODE_DB|MIAOPAN_CODE_DEV|Global\\.Path\\.
     data|data =" in packages/miaopan-code/src (115 matches)"
`;

exports[`TUI inline tool wrapping renders completed question results in compact mode 1`] = `
"   • 问题 2/3 已回答
     • 哪些结果应该始终显示？
       答案: 提问结果
     • 需要附加备注吗？
       答案: 需要
       备注: 保留备注
     • 这个问题没有回答时如何显示？ （无回答）"
`;

exports[`TUI inline tool wrapping renders completed request_user_input results in compact mode 1`] = `
"   • 问题 2/3 已回答
     • 哪些结果应该始终显示？
       答案: 提问结果
     • 需要附加备注吗？
       答案: 需要
       备注: 保留备注
     • 这个问题没有回答时如何显示？ （无回答）"
`;

exports[`TUI inline tool wrapping keeps the existing detailed question result layout 1`] = `
"
┃
┃  # 提问
┃
┃  哪些结果应该始终显示？
┃  提问结果
┃
┃  需要附加备注吗？
┃  需要
┃  备注: 保留备注
┃
┃  这个问题没有回答时如何显示？
┃  （无回答）
┃"
`;

exports[`TUI inline tool wrapping renders request_user_input results with the detailed question layout 1`] = `
"
┃
┃  # 提问
┃
┃  哪些结果应该始终显示？
┃  提问结果
┃
┃  需要附加备注吗？
┃  需要
┃  备注: 保留备注
┃
┃  这个问题没有回答时如何显示？
┃  （无回答）
┃"
`;

exports[`TUI inline tool wrapping snapshots expanded tool errors under the tool text 1`] = `
"   ✱ Grep "MIAOPAN_CODE.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/miaopan-code/src (151 matches)

   ✱ Glob "**/*db*" in packages/miaopan-code (6 matches)
   → Read packages/miaopan-code/src/storage/db.ts [offset=1, limit=130]
   → Read packages/miaopan-code/src/index.ts [offset=1, limit=100]
     No LSP server available for this file type.

   ✱ Grep "export const
     MIAOPAN_CODE_DB|MIAOPAN_CODE_DB|MIAOPAN_CODE_DEV|Global\\.Path\\.
     data|data =" in packages/miaopan-code/src (115 matches)"
`;

exports[`TUI inline tool wrapping keeps separation after a shell output block 1`] = `
"

  $ ls

  file.ts

   ✱ Grep "MIAOPAN_CODE.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/miaopan-code/src (151 matches)

   ✱ Glob "**/*db*" in packages/miaopan-code (6 matches)
   → Read packages/miaopan-code/src/storage/db.ts [offset=1, limit=130]
   → Read packages/miaopan-code/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const
     MIAOPAN_CODE_DB|MIAOPAN_CODE_DB|MIAOPAN_CODE_DEV|Global\\.Path\\.
     data|data =" in packages/miaopan-code/src (115 matches)"
`;

exports[`TUI inline tool wrapping keeps separation after a padded user message 1`] = `
"
  Check whether the next tool remains separated.


   ✱ Grep "MIAOPAN_CODE.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/miaopan-code/src (151 matches)

   ✱ Glob "**/*db*" in packages/miaopan-code (6 matches)
   → Read packages/miaopan-code/src/storage/db.ts [offset=1, limit=130]
   → Read packages/miaopan-code/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const
     MIAOPAN_CODE_DB|MIAOPAN_CODE_DB|MIAOPAN_CODE_DEV|Global\\.Path\\.
     data|data =" in packages/miaopan-code/src (115 matches)"
`;

exports[`TUI inline tool wrapping separates after a multi-line task row 1`] = `
"   ✱ Grep "Task" (2 matches)

   ⠙ Explore Task — Inspect active task spacing

   ✓ General Task — Confirm completed task spacing
     ↳ 1 toolcall · 501ms

   → Read src/cli/cmd/tui/routes/session/index.tsx"
`;

exports[`TUI inline tool wrapping separates a task row from a preceding inline detail 1`] = `
"   → Read src/cli/cmd/tui/routes/session/index.tsx
   ↳ Loaded src/cli/cmd/tui/routes/session/tools.tsx

   ✓ Explore Task — Inspect active task spacing
     ↳ 1 toolcall · 501ms"
`;

exports[`TUI inline tool wrapping separates an inline row from the previous assistant summary 1`] = `
"   ▣ Build · Little Frank · 53.1s

   ✓ Build Task — Review changes
     ↳ 48 toolcalls · 1m 40s"
`;

exports[`TUI inline tool wrapping separates an inline row from the previous assistant error 1`] = `
"│
│  Managed inference requires an active Member plan
│

   ✓ Build Task — Review changes
     ↳ 48 toolcalls · 1m 40s"
`;
